added css for targeted tiles & hinted tiles

--- a/html/testtiles.html
+++ b/html/testtiles.html
@@ -4,18 +4,21 @@
 </head>
     <body>
 
-        <div class="blacktile">
-        </div>
-        <div class="whitetile">
+        <div class="black tile target">
             <a href="generatedactionname">
                 <img src="../images/testpiece.png" alt="zzz" />
             </a>
         </div>
-        <div class="blacktile">
+        <div class="white tile hint">
+            <a href="generatedactionname">
+                <img src="../images/testpiece.png" alt="zzz" />
+            </a>
+        </div>
+        <div class="black tile">
             <img src="../images/testpiece.png" alt="zzz" />
         </div>
         <br />
-        <div class="whitetile"></div><div class="blacktile"></div><div class="whitetile"></div>
+        <div class="white tile hint"></div><div class="black tile target"></div><div class="white tile"></div>
         <div>testdiv</div>
     </body>
 </html>
