removed unnecessary padding setting in css

--- a/html/testtiles.html
+++ b/html/testtiles.html
@@ -17,8 +17,7 @@
         <div class="black tile">
             <img src="../images/testpiece.png" alt="zzz" />
         </div>
-        <br />
-        <div class="white tile hint"></div><div class="black tile target"></div><div class="white tile"></div>
+        <br /><div class="white tile hint"></div><div class="black tile target"></div><div class="white tile"></div>
         <div>testdiv</div>
     </body>
 </html>
