added css for an outer board element & renamed the css to that level

--- a/html/testtiles.html
+++ b/html/testtiles.html
@@ -3,21 +3,21 @@
     <link rel="stylesheet" href="../css/tiles.css">
 </head>
     <body>
-
-        <div class="black tile target">
-            <a href="generatedactionname">
-                <img src="../images/testpiece.png" alt="zzz" />
-            </a>
-        </div>
-        <div class="white tile hint">
-            <a href="generatedactionname">
-                <img src="../images/testpiece.png" alt="zzz" />
-            </a>
-        </div>
-        <div class="black tile">
-            <img src="../images/testpiece.png" alt="zzz" />
-        </div>
-        <br /><div class="white tile hint"></div><div class="black tile target"></div><div class="white tile"></div>
-        <div>testdiv</div>
+		<div id="board">
+			<div class="black tile target">
+				<a href="generatedactionname">
+					<img src="../images/testpiece.png" alt="zzz" />
+				</a>
+			</div>
+			<div class="white tile hint">
+				<a href="generatedactionname">
+					<img src="../images/testpiece.png" alt="zzz" />
+				</a>
+			</div>
+			<div class="black tile">
+				<img src="../images/testpiece.png" alt="zzz" />
+			</div>
+			<br /><div class="white tile hint"></div><div class="black tile target"></div><div class="white tile"></div>
+		</div>
     </body>
 </html>
