--- a/html/mock.html
+++ b/html/mock.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="../css/tiles.css">
+    <link rel="stylesheet" href="../css/board.css">
 </head>
     <body>
 		<div id="board">
