added css for menus and made changes to show boards for dead pieces

--- a/html/mock.html
+++ b/html/mock.html
@@ -1,10 +1,18 @@
 <html>
-<head>
-    <link rel="stylesheet" href="../css/board.css">
-</head>
+	<head>
+		<link rel="stylesheet" href="../css/menu.css" />
+		<link rel="stylesheet" href="../css/board.css" />
+	</head>
     <body>
-		<div id="board">
-			<div class="black tile target">
+		<div id="menu">
+		Login | Logout | Find Game | Statistics | User Management
+		</div>
+		<div class="board">
+			<div class="black tile"></div><div class="white tile"></div><br /><div class="white tile"></div><br /><div class="black tile"></div><br /><div class="white tile"></div><br /><div class="black tile"></div><br /><div class="white tile"></div><br /><div class="black tile"></div><br /><div class="white tile"></div><br />
+		</div>
+		<div class="board">
+			<div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><br /><div class="white tile"></div><br /><div class="black tile"></div><br /><div class="white tile"></div><br /><div class="black tile"></div><br /><div class="white tile"></div><br /><div class="black tile"></div><br /><div class="white tile"></div><br />
+<!-- 		<div class="black tile target">
 				<a href="generatedactionname">
 					<img src="../images/testpiece.png" alt="zzz" />
 				</a>
@@ -17,7 +25,10 @@
 			<div class="black tile">
 				<img src="../images/testpiece.png" alt="zzz" />
 			</div>
-			<br /><div class="white tile hint"></div><div class="black tile target"></div><div class="white tile"></div>
+			<br /><div class="white tile hint"></div><div class="black tile target"></div><div class="white tile"></div>-->	
+		</div>
+		<div class="board">
+			<div class="black tile"></div><div class="white tile"></div><br /><div class="white tile"></div><br /><div class="black tile"></div><br /><div class="white tile"></div><br /><div class="black tile"></div><br /><div class="white tile"></div><br /><div class="black tile"></div><br /><div class="white tile"></div><br />
 		</div>
     </body>
 </html>
