removed unnecessary tile class

--- a/html/mock.html
+++ b/html/mock.html
@@ -8,30 +8,30 @@
 			Login | Logout | Find Game | Statistics | User Management
 		</header>
  		<div class="piece-container graveyard">
-			<div class="tile interactive"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div>
-			<div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div>
+			<div class="interactive"></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
 		</div>
 		<div class="piece-container board">
-			<div class="black tile interactive"><img class="piece" draggable="false" src="../images/testpiece.png" alt="zzz" /></div>
-			<div class="white tile"></div>
-			<div class="black tile"></div>
-			<div class="white tile"></div>
-			<div class="black tile"></div>
-			<div class="white tile"></div>
-			<div class="black tile"></div>
-			<div class="white tile"></div>
+			<div class="black interactive"><img class="piece" draggable="false" src="../images/testpiece.png" alt="zzz" /></div>
+			<div class="white"></div>
+			<div class="black"></div>
+			<div class="white"></div>
+			<div class="black"></div>
+			<div class="white"></div>
+			<div class="black"></div>
+			<div class="white"></div>
 
-			<div class="white tile target interactive"></div><div class="black tile interactive"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div>
-			<div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div>
-			<div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div>
-			<div class="black tile"></div><div class="white tile hint"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div>
-			<div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div>
-			<div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div>
-			<div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div><div class="white tile"></div><div class="black tile"></div>
+			<div class="white target interactive"></div><div class="black interactive"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+			<div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+			<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+			<div class="black"></div><div class="white hint"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+			<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+			<div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+			<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
 		</div>
  		<div class="piece-container graveyard">
-			<div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div>
-			<div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div>
+			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
 		</div>
 	</body>
 </html>
