fixed xhtml5 & css syntax

--- a/html/mock.html
+++ b/html/mock.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<link rel="stylesheet" href="../css/menu.css" />
 		<link rel="stylesheet" href="../css/board.css" />
+		<title>Chess game</title>
 	</head>
     <body>
 		<header id="menu">
