--- a/html/mock.html
+++ b/html/mock.html
@@ -14,8 +14,8 @@
 			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
 		</div>
 		<div class="piece-container board">
-			<div class="black interactive"><img class="piece" draggable="false" src="../images/testpiece.png" alt="zzz" /></div>
-			<div class="white"></div>
+			<div class="black interactive"><img class="piece" draggable="false" src="../images/testpiece.png" alt="testpiece" /></div>
+			<div class="white"><img class="piece" draggable="false" src="../images/testpiece.png" alt="testpiece" /></div>
 			<div class="black"></div>
 			<div class="white"></div>
 			<div class="black"></div>
