added a grid for separating the content and menus

--- a/html/mock.html
+++ b/html/mock.html
@@ -6,34 +6,40 @@
 		<title>Chess game</title>
 	</head>
     <body>
-		<header id="menu">
-			Login | Logout | Find Game | Statistics | User Management
-		</header>
- 		<div class="piece-container graveyard">
-			<div class="interactive"></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-		</div>
-		<div class="piece-container board">
-			<div class="black interactive"><img class="piece" draggable="false" src="../images/testpiece.png" alt="testpiece" /></div>
-			<div class="white"><img class="piece" draggable="false" src="../images/testpiece.png" alt="testpiece" /></div>
-			<div class="black"></div>
-			<div class="white"></div>
-			<div class="black"></div>
-			<div class="white"></div>
-			<div class="black"></div>
-			<div class="white"></div>
+		<div class="center-flex">
+			<div class="grid-container">
+				<div class="menu">
+					Login | Logout | Find Game | Statistics | User Management
+				</div>
+				<div class="content">
+					<div class="piece-container graveyard">
+						<div class="interactive"></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+						<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+					</div>
+					<div class="piece-container board">
+						<div class="black interactive"><img class="piece" draggable="false" src="../images/testpiece.png" alt="testpiece" /></div>
+						<div class="white"><img class="piece" draggable="false" src="../images/testpiece.png" alt="testpiece" /></div>
+						<div class="black"></div>
+						<div class="white"></div>
+						<div class="black"></div>
+						<div class="white"></div>
+						<div class="black"></div>
+						<div class="white"></div>
 
-			<div class="white target interactive"></div><div class="black interactive"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-			<div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
-			<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-			<div class="black"></div><div class="white hint"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
-			<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-			<div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
-			<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-		</div>
- 		<div class="piece-container graveyard">
-			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+						<div class="white target interactive"></div><div class="black interactive"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+						<div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+						<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+						<div class="black"></div><div class="white hint"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+						<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+						<div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+						<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+					</div>
+					<div class="piece-container graveyard">
+						<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+						<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
