added a grif for the board and graveyards to keep them inline

--- a/html/mock.html
+++ b/html/mock.html
@@ -6,37 +6,35 @@
 		<title>Chess game</title>
 	</head>
     <body>
-		<div class="center-flex">
+		<div class="centered">
 			<div class="grid-container">
 				<div class="menu">
 					Login | Logout | Find Game | Statistics | User Management
 				</div>
 				<div class="content">
-					<div class="piece-container graveyard">
-						<div class="interactive"></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-						<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-					</div>
-					<div class="piece-container board">
-						<div class="black interactive"><img class="piece" draggable="false" src="../images/testpiece.png" alt="testpiece" /></div>
-						<div class="white"><img class="piece" draggable="false" src="../images/testpiece.png" alt="testpiece" /></div>
-						<div class="black"></div>
-						<div class="white"></div>
-						<div class="black"></div>
-						<div class="white"></div>
-						<div class="black"></div>
-						<div class="white"></div>
+					<div class="board-container">
+						<div class="piece-container graveyard graveyard-1">
+						</div>
+						<div class="piece-container board">
+							<div class="black interactive"><img class="piece" draggable="false" src="../images/testpiece.png" alt="testpiece" /></div>
+							<div class="white"><img class="piece" draggable="false" src="../images/testpiece.png" alt="testpiece" /></div>
+							<div class="black"></div>
+							<div class="white"></div>
+							<div class="black"></div>
+							<div class="white"></div>
+							<div class="black"></div>
+							<div class="white"></div>
 
-						<div class="white target interactive"></div><div class="black interactive"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-						<div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
-						<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-						<div class="black"></div><div class="white hint"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
-						<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-						<div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
-						<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
-					</div>
-					<div class="piece-container graveyard">
-						<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
-						<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+							<div class="white target interactive"></div><div class="black interactive"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+							<div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+							<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+							<div class="black"></div><div class="white hint"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+							<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+							<div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div>
+							<div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div><div class="white"></div><div class="black"></div>
+						</div>
+						<div class="piece-container graveyard graveyard-2">
+						</div>
 					</div>
 				</div>
 			</div>
